k8s/blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: nginx
        version: "blue"
    spec:
      containers:
      - image: rupgautam/alpine-nginx:blue
        name: alpine-nginx-blue
        ports:
        - containerPort: 8080
        resources: {}
status: {}
