k8s/green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # creationTimestamp: null
  # labels:
  #   app: nginx-green
  name: nginx-green
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: nginx
        version: "green"
    spec:
      containers:
      - image: rupgautam/alpine-nginx:green
        name: alpine-nginx-green
        ports:
        - containerPort: 8080
        resources: {}
status: {}
