k8s/blue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    # name: nginx
    version: "blue"
status:
  loadBalancer: {}
