k8s/green-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    # name: nginx
    version: "green"
