k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - http:
      paths:
      - path: /all
        backend:
          serviceName: nginx-svc
          servicePort: 80
  - http:
      paths:
      - path: /blue
        backend:
          serviceName: nginx-blue-svc
          servicePort: 80
  - http:
      paths:
      - path: /green
        backend:
          serviceName: nginx-green-svc
          servicePort: 80
